--- a/style/style.css
+++ b/style/style.css
@@ -1271,7 +1271,7 @@ input[data-id="input-search"]:focus::-webkit-input-placeholder {
   box-shadow: 0px 10px 10px -5px rgba(0, 0, 0, 0.07);
 }
 #back-to-top:before {
-  content: "";
+  content: "⤴";
 }
 #back-to-top.fade-in {
   visibility: visible;
