--- a/style/style.css
+++ b/style/style.css
@@ -99,8 +99,7 @@ body {
   font-weight: normal;
   font-style: normal;
   -webkit-smoothing: antialiased;
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow:hidden;
   font-family: "proxima-nova", sans-serif;
 }
 hr {
